--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rockchip - Innovative Solutions</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="rochchipcss-1.css">
 </head>
 <body>
     <header>
