--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rockchip - Innovative Solutions</title>
+    <title>RockChip Calgary - Mobile RockChip Solutions</title>
     <link rel="stylesheet" href="rochchipcss-1.css">
 </head>
 <body>
