--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -10,8 +10,8 @@
     <header>
         <div class="container">
             <div class="logo">
-                <h1>Rockchip</h1>
-                <p>Innovative Business Solutions</p>
+                <h1>RockChip Calgary</h1>
+                <p>Mobile RockChip Solutions</p>
             </div>
             <nav>
                 <ul>
@@ -55,7 +55,7 @@
     <section id="about">
         <div class="container">
             <h2>About Rockchip</h2>
-            <p>At Rockchip, we specialize in providing innovative business solutions that drive growth and efficiency. Our team of experienced professionals is dedicated to delivering high-quality services that meet the unique needs of each client.</p>
+            <p>We deliver expert mobile Rock Chip repair for commercial and residential vehicles of all makes and models, providing guaranteed quality service.</p>
         </div>
     </section>
 
