--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -52,6 +52,10 @@
         </div>
     </section>
 
+     <img src="https://github.com/gersol12/roger.github.io/blob/main/rockchip.jpeg" alt="Description of Image" width="600">
+    </section>
+</body>
+
     <section id="about">
         <div class="container">
             <h2>About Rockchip</h2>
