--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -27,7 +27,7 @@
     <section id="home">
         <div class="container">
             <h2>Welcome to Rockchip</h2>
-            <p>Your partner in driving business innovation and efficiency.</p>
+            <p>"Rock Chips Happen, We Fix Them—Anytime, Anywhere!".</p>
             <a href="#services" class="btn">Explore Our Services</a>
         </div>
     </section>
