--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -26,8 +26,8 @@
 
     <section id="home">
         <div class="container">
-            <h2>Welcome to Rockchip</h2>
-            <p>"Rock Chips Happen, We Fix Them—Anytime, Anywhere!".</p>
+            <h2>Welcome to RockChip Calgary</h2>
+            <p>"Fast, Friendly, and Mobile—Rock Chip Repair at Your Service!".</p>
             <a href="#services" class="btn">Explore Our Services</a>
         </div>
     </section>
