--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -37,16 +37,18 @@
             <h2>Our Services</h2>
             <div class="service-grid">
                 <div class="service">
-                    <h3>Consulting</h3>
-                    <p>We provide expert business consulting to help you grow your company.</p>
+                    <h3>On-Site Rock Chip Repair</h3>
+                    <p>Providing immediate repairs at customers' locations, whether at home, work, or on the road.</p>
                 </div>
                 <div class="service">
-                    <h3>Technology Solutions</h3>
-                    <p>Innovative technology solutions tailored to your business needs.</p>
+                    <h3>Fleet Services</h3>
+                    <p>Offering bulk repair services for businesses with multiple vehicles, ensuring their fleets are chip-free.</p>
                 </div>
                 <div class="service">
-                    <h3>Market Analysis</h3>
-                    <p>Comprehensive market analysis and strategy development.</p>
+                    <h3>24/7 Emergency Repairs</h3>
+                    <p>Providing round-the-clock services for urgent repairs, especially for commercial vehicles.
+
+.</p>
                 </div>
             </div>
         </div>
