--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -38,7 +38,7 @@
             <div class="service-grid">
                 <div class="service">
                     <h3>On-Site Rock Chip Repair</h3>
-                    <p>Providing immediate repairs at customers' locations, whether at home, work, or on the road.</p>
+                    <p>Providing immediate repairs at customers locations, whether at home, work, or on the road.</p>
                 </div>
                 <div class="service">
                     <h3>Fleet Services</h3>
