--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -54,6 +54,15 @@
         </div>
     </section>
 
+    
+    <!-- Add the image that redirects to the homepage here -->
+    <div class="container" style="text-align: center; margin: 20px 0;">
+        <a href="#home">
+            <img src="path/to/your/image.jpg" alt="Rock Chip Repair" style="max-width: 100%; height: auto;">
+        </a>
+    </div>
+
+
     </section>
 </body>
 
