--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -6,6 +6,15 @@
     <title>RockChip Calgary - Mobile RockChip Solutions</title>
     <link rel="stylesheet" href="rochchipcss-1.css">
 </head>
+
+  <!-- Add the image that redirects to the homepage here -->
+    <div class="container" style="text-align: center; margin: 20px 0;">
+        <a href="#home">
+            <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/rockchip.jpeg" alt="Rock Chip Repair" style="max-width: 100%; height: auto;">
+        </a>
+    </div>
+
+    
 <body>
     <header>
         <div class="container">
