--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -10,7 +10,7 @@
   <!-- Add the image that redirects to the homepage here -->
     <div class="container" style="text-align: center; margin: 20px 0;">
         <a href="#home">
-            <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/rockchip.jpeg" alt="Rock Chip Repair" style="max-width: 100%; height: auto;">
+            <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/rockchip.jpeg" alt="Rock Chip Repair" style="max-width: 20%; height: 20%;">
         </a>
     </div>
 
