--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -7,21 +7,19 @@
     <link rel="stylesheet" href="rochchipcss-1.css">
 </head>
 
-
 <body>
     <header>
         <div class="container">
             <div class="logo">
                 <h1>RockChip Calgary</h1>
                 <p>Mobile RockChip Solutions</p>
+ <!-- Image added here -->
+                <div style="text-align: center; margin: 10px 0;">
+                    <a href="#home">
+                        <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/rockchip.jpeg" alt="Rock Chip Repair" style="max-width: 20%; height: 20%;">
+                    </a>
+                
             </div>
-
- <!-- Add the image that redirects to the homepage here -->
-    <div class="container" style="text-align: center; margin: 20px 0;">
-        <a href="#home">
-            <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/rockchip.jpeg" alt="Rock Chip Repair" style="max-width: 5%; height: 5%;">
-        </a>
-    </div>
             
             <nav>
                 <ul>
