--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RockChip Calgary - Mobile RockChip Solutions</title>
+    <title>RockChip Calgary - Mobile RockChip Repair Solutions</title>
     <link rel="stylesheet" href="rochchipcss-1.css">
 </head>
 
@@ -86,7 +86,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Rockchip. All Rights Reserved.</p>
+            <p>&copy; 2024 RockChip Calgary. All Rights Reserved.</p>
         </div>
     </footer>
 
