--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RockChip Calgary - Mobile RockChip Repair Solutions</title>
+    <title>Book An Appointment - (587) 223-6178 - Mobile RockChip Repair Solutions</title>
     <link rel="stylesheet" href="rochchipcss-1.css">
 </head>
 
@@ -16,7 +16,7 @@
  <!-- Image added here -->
                 <div style="text-align: center; margin: 10px 0;">
                     <a href="#home">
-                        <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/rockchip.jpeg" alt="Rock Chip Repair" style="max-width: 20%; height: 20%;">
+                        <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/rockchip.jpeg" alt="Rock Chip Repair" style="max-width: 15%; height: 15%;">
                     </a>
                 
             </div>
