--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -11,9 +11,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <h1>RockChip Calgary</h1>
-                <p>Mobile RockChip Solutions</p>
- <!-- Image added here -->
+                <h1>Book An Appointment - (587) 223-6178</h1>
                 <div style="text-align: center; margin: 10px 0;">
                     <a href="#home">
                         <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/rockchip.jpeg" alt="Rock Chip Repair" style="max-width: 15%; height: 15%;">
