--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -15,6 +15,12 @@
                     <a href="#home">
                         <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/rockchip.jpeg" alt="Rock Chip Repair" style="max-width: 5%; height: 5%;">
                     </a>
+
+                     <div class="call-us">
+                <h1>Call Us Now</h1>
+                <p><a href="tel:+15872236178">(587) 223-6178</a></p>
+            </div>
+        </div>
                 
             </div>
             
