--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -11,6 +11,11 @@
     <header>
         <div class="container">
             <div class="logo">
+
+                 <a href="https://www.instagram.com/yourprofile" target="_blank" class="social-link">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" class="social-logo">
+
+                
                 <div style="text-align: center; margin: 10px 0;">
                     <a href="#home">
                         <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/rockchip.jpeg" alt="Rock Chip Repair" style="max-width: 5%; height: 5%;">
