--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -13,7 +13,8 @@
             <div class="logo">
 
                  <a href="https://www.instagram.com/yourprofile" target="_blank" class="social-link">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" class="social-logo">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" style="width: 20px; height: 20px;">
+</a>
 
                 
                 <div style="text-align: center; margin: 10px 0;">
