--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -12,6 +12,7 @@
         <div class="container">
             <div class="logo">
 
+                <h2>Check Us Out</h2>
                  <a href="https://www.instagram.com/yourprofile" target="_blank" class="social-link">
     <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" style="width: 20px; height: 20px;">
 </a>
