--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -13,6 +13,9 @@
             <div class="logo">
 
                 <h2>Check Us Out</h2>
+                <div style="text-align: right;">
+    <p>Move this text to the right</p>
+</div>
                  <a href="https://www.instagram.com/yourprofile" target="_blank" class="social-link">
     <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" style="width: 20px; height: 20px;">
 </a>
