--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -42,11 +42,7 @@
             <h2>Welcome to RockChip Calgary</h2>
             <p>"Fast, Friendly, and Mobile—Rock Chip Repair at Your Service!".</p>
 
-             <h2>Check Us Out</h2>
-                 <a href="https://www.instagram.com/yourprofile" target="_blank" class="social-link">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" style="width: 20px; height: 20px;">
-</a>
-
+<div style="height: 50px;"></div> 
             
             <a href="#services" class="btn">Explore Our Services</a>
         </div>
