--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -12,10 +12,15 @@
         <div class="container">
             <div class="logo">
 
+
                      <div class="call-us">
                 <h1>Book An Appointment</h1>
                 <p><a href="tel:+15872236178">(587) 223-6178</a></p>
             </div>
+
+                
+  <div style="text-align: center; margin: 10px 0;">
+                    <a href="#home">
         </div>
                 
             </div>
