--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -12,10 +12,10 @@
         <div class="container">
             <div class="logo">
                 <!-- Added "appointment-section" class -->
-                <div class="appointment">
-                    <h1>Book An Appointment</h1>
-                    <p><a href="tel:+15872236178" class="phone-number">(587) 223-6178</a></p>
-                </div>
+             <div class="appointment-section">
+    <h1>Book An Appointment</h1>
+    <p>(587) 223-6178</p>
+</div>
 
         </div>
                 
