--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -13,10 +13,12 @@
             <div class="logo">
                 <!-- Added "appointment-section" class -->
              <div class="appointment-section">
+<div class="appointment-section">
     <h1>Book An Appointment</h1>
-    <p>(587) 223-6178</p>
+    <p>
+        <a href="tel:+15872236178" style="color: #fff;">(587) 223-6178</a>
+    </p>
 </div>
-
         </div>
                 
             </div>
