--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -27,7 +27,7 @@
 <nav>
     <div class="logo">
         <a href="#home">
-            <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/rockchip.jpeg" alt="Rock Chip Repair" style="max-width: 8%; height: 8%;">
+            <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/rockchip.jpeg" alt="Rock Chip Repair" style="max-width: 50px; height: auto;">
         </a>
     </div>
     <ul>
