--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -14,7 +14,7 @@
                 <!-- Added "appointment-section" class -->
              <div class="appointment-section">
 <div class="appointment-section">
-    <h1>Book An Appointment</h1>
+    <h1>Book An Appointment Today</h1>
     <p>
         <a href="tel:+15872236178" style="color: #fff;">(587) 223-6178</a>
     </p>
@@ -44,7 +44,7 @@
 
     <section id="home">
         <div class="container">
-            <h2>Welcome to RockChip Calgary</h2>
+            <h2>Welcome To RockChip Calgary</h2>
             <p>"Fast, Friendly, and Mobile—Rock Chip Repair at Your Service!".</p>
 
 <div style="height: 50px;"></div> 
