--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -14,7 +14,7 @@
                 <!-- Added "appointment-section" class -->
              <div class="appointment-section">
 <div class="appointment-section">
-    <h1>Book An Appointment Today</h1>
+    <h1>Book An Appointment</h1>
     <p>
         <a href="tel:+15872236178" style="color: #fff;">(587) 223-6178</a>
     </p>
