--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -20,40 +20,25 @@
     </p>
 </div>
 
-
-    <style>
+ <style>
         .instagram-logo {
-            display: inline-block;
-            width: 50px; /* Width of the logo */
-            height: 50px; /* Height of the logo */
-            position: relative;
-            background-color: #E1306C; /* Instagram's brand color */
-            border-radius: 15%; /* Slightly rounded corners */
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Shadow for depth */
+            width: 20px; /* Adjust the size of the logo */
+            height: auto; /* Keep the aspect ratio */
+            transition: transform 0.3s; /* Smooth hover effect */
         }
 
-        .instagram-logo::before {
-            content: '';
-            position: absolute;
-            top: 8px; /* Positioning the circle */
-            left: 8px; /* Positioning the circle */
-            width: 34px; /* Circle diameter */
-            height: 34px; /* Circle diameter */
-            background-color: white; /* Circle color */
-            border-radius: 50%; /* Circle shape */
-        }
-
-        .instagram-logo::after {
-            content: '';
-            position: absolute;
-            top: 12px; /* Positioning the small circle */
-            left: 12px; /* Positioning the small circle */
-            width: 10px; /* Small circle diameter */
-            height: 10px; /* Small circle diameter */
-            background-color: #E1306C; /* Small circle color */
-            border-radius: 50%; /* Small circle shape */
+        .instagram-logo:hover {
+            transform: scale(1.1); /* Slightly enlarge on hover */
         }
     </style>
+</head>
+<body>
+    <a href="https://www.instagram.com/yourusername" target="_blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram Logo" class="instagram-logo">
+    </a>
+</body>
+</html>
+
                  
 </head>
 <body>
