--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -20,22 +20,39 @@
     </p>
 </div>
 
- <style>
+<style>
+        .instagram-container {
+            display: flex; /* Use flexbox for alignment */
+            align-items: center; /* Center vertically */
+            justify-content: center; /* Center horizontally */
+            margin: 20px; /* Add margin for spacing */
+        }
+
         .instagram-logo {
             width: 20px; /* Adjust the size of the logo */
             height: auto; /* Keep the aspect ratio */
             transition: transform 0.3s; /* Smooth hover effect */
+            margin-right: 10px; /* Space between logo and text */
         }
 
         .instagram-logo:hover {
             transform: scale(1.1); /* Slightly enlarge on hover */
         }
+
+        .instagram-text {
+            color: #000; /* Change text color to your preference */
+            font-size: 14px; /* Adjust font size */
+            line-height: 1.5; /* Adjust line height for better spacing */
+        }
     </style>
 </head>
 <body>
-    <a href="https://www.instagram.com/yourusername" target="_blank">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram Logo" class="instagram-logo">
-    </a>
+    <div class="instagram-container">
+        <a href="https://www.instagram.com/yourusername" target="_blank" class="instagram-link">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram Logo" class="instagram-logo">
+            <span class="instagram-text">Follow Us on Instagram</span>
+        </a>
+    </div>
 </body>
 </html>
 
