--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -40,8 +40,8 @@
         }
 
         .instagram-text {
-            color: #000; /* Change text color to your preference */
-            font-size: 14px; /* Adjust font size */
+            color: #FFF; /* Change text color to your preference */
+            font-size: 10px; /* Adjust font size */
             line-height: 1.5; /* Adjust line height for better spacing */
         }
     </style>
@@ -50,7 +50,7 @@
     <div class="instagram-container">
         <a href="https://www.instagram.com/yourusername" target="_blank" class="instagram-link">
             <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram Logo" class="instagram-logo">
-            <span class="instagram-text">Follow Us on Instagram</span>
+            <span class="instagram-text">Follow Us</span>
         </a>
     </div>
 </body>
