--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -42,7 +42,7 @@
         .instagram-text {
             color: #FFF; /* Change text color to your preference */
             font-size: 10px; /* Adjust font size */
-            line-height: 1.5; /* Adjust line height for better spacing */
+            line-height: .5; /* Adjust line height for better spacing */
         }
     </style>
 </head>
