--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -25,11 +25,11 @@
             display: flex; /* Use flexbox for alignment */
             align-items: center; /* Center vertically */
             justify-content: center; /* Center horizontally */
-            margin: 20px; /* Add margin for spacing */
+            margin: 10px; /* Add margin for spacing */
         }
 
         .instagram-logo {
-            width: 20px; /* Adjust the size of the logo */
+            width: 15px; /* Adjust the size of the logo */
             height: auto; /* Keep the aspect ratio */
             transition: transform 0.3s; /* Smooth hover effect */
             margin-right: 10px; /* Space between logo and text */
@@ -41,22 +41,20 @@
 
         .instagram-text {
             color: #FFF; /* Change text color to your preference */
-            font-size: 10px; /* Adjust font size */
-            line-height: .5; /* Adjust line height for better spacing */
+            font-size: 8px; /* Adjust font size */
+            line-height: 0; /* Adjust line height for better spacing */
         }
     </style>
 </head>
 <body>
+       <span class="instagram-text">Follow Us</span>
     <div class="instagram-container">
         <a href="https://www.instagram.com/yourusername" target="_blank" class="instagram-link">
             <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram Logo" class="instagram-logo">
-            <span class="instagram-text">Follow Us</span>
         </a>
     </div>
 </body>
-</html>
-
-                 
+</html>        
 </head>
 <body>
     <a href="https://www.instagram.com/yourusername" target="_blank" class="instagram-logo"></a>
