--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -20,11 +20,11 @@
     </p>
 </div>
 
-<style>
+    <style>
         .instagram-container {
             display: flex; /* Use flexbox for alignment */
             align-items: center; /* Center vertically */
-            justify-content: center; /* Center horizontally */
+            justify-content: flex-end; /* Move to the far right */
             margin: 10px; /* Add margin for spacing */
         }
 
@@ -32,7 +32,7 @@
             width: 15px; /* Adjust the size of the logo */
             height: auto; /* Keep the aspect ratio */
             transition: transform 0.3s; /* Smooth hover effect */
-            margin-right: 10px; /* Space between logo and text */
+            margin-right: 5px; /* Reduced space between logo and text */
         }
 
         .instagram-logo:hover {
@@ -47,20 +47,14 @@
     </style>
 </head>
 <body>
-       <span class="instagram-text">Follow Us</span>
     <div class="instagram-container">
+        <span class="instagram-text">Follow Us On Instagram</span>
         <a href="https://www.instagram.com/yourusername" target="_blank" class="instagram-link">
             <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram Logo" class="instagram-logo">
         </a>
     </div>
 </body>
-</html>        
-</head>
-<body>
-    <a href="https://www.instagram.com/yourusername" target="_blank" class="instagram-logo"></a>
-</body>
 </html>
-
 
                  
         </div>
