--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -48,7 +48,7 @@
 </head>
 <body>
     <div class="instagram-container">
-        <span class="instagram-text">Follow Us On Instagram</span>
+        <span class="instagram-text">Follow Us On </span>
         <a href="https://www.instagram.com/yourusername" target="_blank" class="instagram-link">
             <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram Logo" class="instagram-logo">
         </a>
