--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -48,8 +48,8 @@
 </head>
 <body>
     <div class="instagram-container">
-        <span class="instagram-text">Follow Us On </span>
-        <a href="https://www.instagram.com/yourusername" target="_blank" class="instagram-link">
+        <span class="instagram-text">Follow Us On! </span>
+        <a href="https://www.instagram.com/rockchipcalgary" target="_blank" class="instagram-link">
             <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram Logo" class="instagram-logo">
         </a>
     </div>
