--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -85,8 +85,6 @@
             <h2>Welcome To RockChip Calgary</h2>
             <p>"Fast, Friendly, and Mobile—Rock Chip Repair at Your Service!".</p>
 
-<div style="height: 50px;"></div> 
-            
             <a href="#services" class="btn">Explore Our Services</a>
         </div>
     </section>
@@ -118,7 +116,7 @@
 
     <section id="about">
         <div class="container">
-            <h2>About Rockchip</h2>
+            <h2>About RockChip Calgary</h2>
             <p>We deliver expert mobile Rock Chip repair for commercial and residential vehicles of all makes and models, providing guaranteed quality service.</p>
         </div>
     </section>
