--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -141,7 +141,7 @@
             <!-- Scrolling Photo Gallery Section -->
             <section class="gallery">
                 <div class="scrolling-photos">
-                    <img src="image1.jpg" alt="Photo 1">
+                    <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo4.jpeg" alt="Photo 1">
                     <img src="image2.jpg" alt="Photo 2">
                     <img src="image3.jpg" alt="Photo 3">
                     <img src="image4.jpg" alt="Photo 4">
