--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -142,10 +142,11 @@
             <section class="gallery">
                 <div class="scrolling-photos">
                     <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo4.jpeg" alt="Photo 1">
-                    <img src="image2.jpg" alt="Photo 2">
-                    <img src="image3.jpg" alt="Photo 3">
-                    <img src="image4.jpg" alt="Photo 4">
-                    <img src="image5.jpg" alt="Photo 5">
+                    <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo1.jpeg" alt="Photo 2">
+                    <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo2.jpeg" alt="Photo 3">
+                    <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo3.jpeg" alt="Photo 4">
+                    <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo6.jpeg" alt="Photo 5">
+                     <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo5.jpeg" alt="Photo 5">
                 </div>
             </section>
         </div>
