--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -147,6 +147,12 @@
                     <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo3.jpeg" alt="Photo 4">
                     <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo6.jpeg" alt="Photo 5">
                      <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo5.jpeg" alt="Photo 5">
+                    <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo4.jpeg" alt="Photo 1">
+                    <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo1.jpeg" alt="Photo 2">
+                    <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo2.jpeg" alt="Photo 3">
+                    <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo3.jpeg" alt="Photo 4">
+                    <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo6.jpeg" alt="Photo 5">
+                     <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo5.jpeg" alt="Photo 5">
                 </div>
             </section>
         </div>
