--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -31,7 +31,7 @@
 
         .scrolling-photos {
             display: flex; /* Flexbox for horizontal layout */
-            animation: scroll 30s linear infinite; /* Animation effect */
+            animation: scroll 60s linear infinite; /* Animation effect */
         }
 
         .scrolling-photos img {
@@ -114,6 +114,8 @@
         <div class="container">
             <h2>Welcome To RockChip Calgary</h2>
             <p>"Fast, Friendly, and Mobile—Rock Chip Repair at Your Service!".</p>
+
+            <div style="height: 50px;"></div> 
 
             <a href="#services" class="btn">Explore Our Services</a>
         </div>
