--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -102,6 +102,7 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#services">Services</a></li>
         <li><a href="#about">About Us</a></li>
+         <li><a href="#faq">FAQ</a></li> <!-- Added FAQ link -->
         <li><a href="#contact">Contact</a></li>
     </ul>
 </nav>
@@ -175,6 +176,30 @@
             <p>We deliver expert mobile Rock Chip repair for commercial and residential vehicles of all makes and models, providing guaranteed quality service.</p>
         </div>
     </section>
+
+ <!-- New FAQ Section -->
+    <section id="faq">
+        <div class="container">
+            <h2>Frequently Asked Questions (FAQ)</h2>
+            <div class="faq-item">
+                <h3>What is rock chip repair?</h3>
+                <p>Rock chip repair is a process that restores the integrity of your vehicle's windshield after it has been damaged by a rock or debris.</p>
+            </div>
+            <div class="faq-item">
+                <h3>How long does the repair take?</h3>
+                <p>The repair process typically takes around 30 minutes, depending on the extent of the damage.</p>
+            </div>
+            <div class="faq-item">
+                <h3>Will my insurance cover the repair?</h3>
+                <p>Many insurance policies cover rock chip repairs, but it is best to check with your provider for details.</p>
+            </div>
+            <div class="faq-item">
+                <h3>Do you provide mobile services?</h3>
+                <p>Yes, we offer mobile rock chip repair services, meaning we can come to your location for repairs.</p>
+            </div>
+        </div>
+    </section>
+
 
     <section id="contact">
         <div class="container">
