--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -216,7 +216,7 @@
 <section id="contact">
     <div class="container">
         <h2>Contact Us</h2>
-        <iframe src="<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdTEKwVI9diNmmFv85v5GXbajULcjoV_oLC6wimAqJDRJSIrg/viewform?embedded=true" width="640" height="826" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>" width="100%" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <iframe src="<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdTEKwVI9diNmmFv85v5GXbajULcjoV_oLC6wimAqJDRJSIrg/viewform?embedded=true" width="640" height="826" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>
 </section>
     
