--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -231,7 +231,20 @@
         </div>
     </footer>
 
+        <script>
+        // JavaScript for toggling the navigation menu
+        document.getElementById('nav-toggle').addEventListener('click', function() {
+            var navMenu = document.getElementById('nav-menu');
+            navMenu.classList.toggle('active'); // Toggle 'active' class
+        });
+    </script>
+
     <script src="script.js"></script>
+
 </body>
 </html>
+
+
+
+
 
