--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -20,9 +20,115 @@
     </p>
 </div>
 
+      /* Nav Toggle Button (Smaller and Orange) */
+        .nav-toggle {
+            background-color: orange; /* Changed to orange */
+            color: white;
+            padding: 5px 10px; /* Made smaller */
+            border: none;
+            font-size: 18px; /* Reduced font size */
+            cursor: pointer;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
 
-   <!-- Nav Toggle Button -->
-            <button id="nav-toggle" class="nav-toggle">☰</button>
+        .nav-toggle:focus {
+            outline: none;
+        }
+
+        .nav-toggle:hover {
+            background-color: #ff6600; /* Darker orange on hover */
+        }
+
+        /* Nav Menu */
+        nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        /* Navigation Menu (Mobile Hidden by Default) */
+        .nav-menu {
+            display: none; /* Hidden by default */
+            flex-direction: column;
+            position: absolute;
+            top: 60px; /* Positioned below the header */
+            right: 0;
+            background-color: #333;
+            width: 100%;
+            text-align: center;
+            padding: 15px 0;
+            transition: all 0.3s ease;
+        }
+
+        .nav-menu.active {
+            display: flex; /* Show the nav menu when active */
+        }
+
+        /* Menu Links */
+        .nav-menu ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        .nav-menu ul li {
+            padding: 10px 0;
+        }
+
+        .nav-menu ul li a {
+            color: white;
+            text-decoration: none;
+            font-size: 18px;
+            transition: color 0.3s ease;
+        }
+
+        .nav-menu ul li a:hover {
+            color: #1abc9c;
+        }
+
+        /* Add smooth drop-down effect */
+        .nav-menu {
+            opacity: 0;
+            pointer-events: none;
+            transform: translateY(-20px); /* Move up initially */
+            transition: opacity 0.5s ease, transform 0.5s ease;
+        }
+
+        .nav-menu.active {
+            opacity: 1;
+            pointer-events: all;
+            transform: translateY(0); /* Move down to visible */
+        }
+
+        /* Media Queries for Desktop View */
+        @media (min-width: 768px) {
+            .nav-toggle {
+                display: none;
+            }
+
+            .nav-menu {
+                display: flex;
+                position: relative;
+                opacity: 1;
+                pointer-events: all;
+                flex-direction: row;
+                transform: none;
+            }
+
+            .nav-menu ul {
+                display: flex;
+                justify-content: flex-end;
+                align-items: center;
+                gap: 20px;
+            }
+
+            .nav-menu ul li {
+                padding: 0;
+            }
+        }
+    </style>
+</head>
             
  <style>
         /* Add styles for scrolling photo gallery */
