--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -20,7 +20,31 @@
     </p>
 </div>
 
-      /* Nav Toggle Button (Smaller and Orange) */
+   <style>
+        /* General Styles */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        header {
+            background-color: #333;
+            padding: 15px;
+            color: white;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        /* Logo */
+        .logo img {
+            max-width: 60px;
+            height: auto;
+        }
+
+        /* Nav Toggle Button (Smaller and Orange) */
         .nav-toggle {
             background-color: orange; /* Changed to orange */
             color: white;
@@ -129,6 +153,15 @@
         }
     </style>
 </head>
+
+<body>
+    <header>
+        <div class="logo">
+            <a href="#home">
+                <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/rockchip.jpeg" alt="Rock Chip Repair">
+            </a>
+        </div>
+        <button id="nav-toggle" class="nav-toggle">☰</button>
             
  <style>
         /* Add styles for scrolling photo gallery */
