--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -151,22 +151,19 @@
                     <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo11.jpeg" alt="Photo 5">
                      <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo5.jpeg" alt="Photo 5">
                     <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo4.jpeg" alt="Photo 1">
-                    <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo1.jpeg" alt="Photo 2">
-                    <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo2.jpeg" alt="Photo 3">
+                    <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/1.jpeg" alt="Photo 2">
+                    <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/2.jpeg" alt="Photo 3">
                     <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo3.jpeg" alt="Photo 4">
                     <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo12.jpeg" alt="Photo 5">
                      <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo13.jpeg" alt="Photo 5">
 
-                     <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo2.jpeg" alt="Photo 3">
-                    <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo14.jpeg" alt="Photo 4">
-                    <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo11.jpeg" alt="Photo 5">
-                     <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo5.jpeg" alt="Photo 5">
-                    <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo4.jpeg" alt="Photo 1">
-                    <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo1.jpeg" alt="Photo 2">
-                    <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo2.jpeg" alt="Photo 3">
-                    <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo3.jpeg" alt="Photo 4">
-                    <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo12.jpeg" alt="Photo 5">
-                     <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo13.jpeg" alt="Photo 5">
+                     <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/3.jpeg" alt="Photo 3">
+                    <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/4.jpeg" alt="Photo 4">
+                    <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/5.jpeg" alt="Photo 5">
+                     <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/6.jpeg" alt="Photo 5">
+                    <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/7.jpeg" alt="Photo 1">
+                    <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/8.jpeg" alt="Photo 2">
+                  
                 </div>
             </section>
         </div>
