--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -144,7 +144,7 @@
             <!-- Scrolling Photo Gallery Section -->
             <section class="gallery">
                 <div class="scrolling-photos">
-                    <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photojpeg10.jpeg" alt="Photo 1">
+                    <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/jpeg10.jpeg" alt="Photo 1">
                     <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo1.jpeg" alt="Photo 2">
                     <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo2.jpeg" alt="Photo 3">
                     <img src="https://raw.githubusercontent.com/gersol12/roger.github.io/main/photo14.jpeg" alt="Photo 4">
