--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -197,8 +197,16 @@
                 <p>The repair process typically takes around 30 minutes, depending on the extent of the damage.</p>
             </div>
             <div class="faq-item">
-                <h3>Will my insurance cover the repair?</h3>
-                <p>Many insurance policies cover rock chip repairs, but it is best to check with your provider for details.</p>
+                <h3>How does rock chip repair prevent further damage?</h3>
+                <p>A small chip can easily expand into a large crack due to temperature changes, pressure, or additional impacts. Repairing a chip early prevents the windshield from cracking further, saving you from having to replace the entire windshield.</p>
+            </div>
+             <div class="faq-item">
+                <h3>Is rock chip repair cost-effective?</h3>
+                <p>Yes, repairing a rock chip is significantly cheaper than replacing a full windshield. Many auto insurance companies even cover the cost of rock chip repair without affecting your premium.</p>
+            </div>
+             <div class="faq-item">
+                <h3>How does rock chip repair maintain structural integrity?</h3>
+                <p>The windshield is a key structural component of your vehicle. A damaged windshield is weaker and more prone to shattering, especially in the event of a collision. Repairing chips helps maintain the overall strength of the windshield.</p>
             </div>
             <div class="faq-item">
                 <h3>Do you provide mobile services?</h3>
