--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -135,7 +135,7 @@
                     <p>Offering bulk repair services for businesses with multiple vehicles, ensuring their fleets are chip-free.</p>
                 </div>
                 <div class="service">
-                    <h3>Referral Program:</h3>
+                    <h3>Referral Program</h3>
                     <p>Referral system where customers can earn discounts for referring friends or family to the service.
 
 </p>
