--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RockChip Website Project</title>
+
+  <style>
+        html, body {
+            overflow-x: hidden;
+        }
+    </style>
+    
     <link rel="stylesheet" href="rochchipcss-1.css">
 </head>
     
