--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -222,11 +222,32 @@
         </div>
     </section>
 
-<section id="contact">
-    <div class="container">
+  <style>
+        /* CSS for centering */
+        body, html {
+            height: 100%; /* Full height for body and html */
+            margin: 0; /* Remove default margins */
+            display: flex; /* Use Flexbox for centering */
+            justify-content: center; /* Center horizontally */
+            align-items: center; /* Center vertically */
+            background-color: #f9f9f9; /* Optional: background color */
+        }
+        .form-container {
+            width: 90%; /* Optional: Adjust width for responsiveness */
+            max-width: 600px; /* Set a maximum width for the form */
+            height: 600px; /* Set height for the form */
+        }
+        iframe {
+            width: 100%; /* Full width of the container */
+            height: 100%; /* Full height of the container */
+            border: none; /* Remove default border */
+        }
+    </style>
+</head>
+<body>
+    <div class="form-container">
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdTEKwVI9diNmmFv85v5GXbajULcjoV_oLC6wimAqJDRJSIrg/viewform?embedded=true" width="480" height="640" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>
-</section>
     
 
     <footer>
