--- a/rochchip-1.html
+++ b/rochchip-1.html
@@ -223,9 +223,17 @@
     </section>
 
 
-    <div class="form-container">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdTEKwVI9diNmmFv85v5GXbajULcjoV_oLC6wimAqJDRJSIrg/viewform?embedded=true" width="400" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-    </div>
+      <section id="contact">
+        <div class="container">
+            <h2>Contact Us</h2>
+            <form id="contactForm">
+                <input type="text" name="name" placeholder="Your Name" required>
+                <input type="email" name="email" placeholder="Your Email" required>
+                <textarea name="message" placeholder="Your Message" required></textarea>
+         <button type="submit" class="center-button">Send Message</button>
+            </form>
+        </div>
+    </section>
     
 
     <footer>
